# air-quality-data-hub

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  api.py  collect_air_quality.py  collect_weather.py  database.py  districts.py  main.py  pyproject.toml
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: district-map.tsx  globals.css  layout.tsx  mock-data.ts  page.tsx
frontend/tests/: dashboard-content.test.mjs  rendered-html.test.mjs
ingestion/: duckdb.yml  postgres.yml
scripts/: check_postgres_connection.py  create_postgres_tables.py  inspect_database.py
tests/: test_api.py  test_database.py
