[project]
name = "air-quality-data-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "acryl-datahub[postgres,sqlalchemy]>=1.6.0.15",
    "datahub>=0.999.1",
    "fastapi>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
